# notchcode

./: .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md
docs/superpowers/specs/: 2026-06-17-auto-launch-smooth-pill-design.md  2026-06-17-windows-ui-bold-refinement-design.md
mac/Notchcode/: ExportOptions.plist
mac/Notchcode/Notchcode/: NotchcodeApp.swift
mac/Notchcode/Notchcode.xcodeproj/: project.pbxproj
mac/Notchcode/Notchcode/App/: LaunchAtLogin.swift  NotchOverlay.swift  Settings.swift
mac/Notchcode/Notchcode/Engine/: Agent.swift  CostTracker.swift  HookEvent.swift  SessionStateEngine.swift
mac/Notchcode/Notchcode/IO/: ClaudeJSONLParser.swift  ClaudeProjectsWatcher.swift  CodexRolloutParser.swift  CodexSessionsWatcher.swift  HookInstaller.swift  HookServer.swift  JSONLParser.swift  Notifier.swift  ProjectsWatcher.swift  TerminalFocus.swift  TranscriptEvents.swift
mac/Notchcode/Notchcode/Resources/: hook-snippet.json  install-hooks.sh  uninstall-hooks.sh
mac/Notchcode/Notchcode/UI/: Agent+UI.swift  NotchView.swift  SessionDetailView.swift  SettingsView.swift
scripts/: release-mac.sh  release-windows.ps1
windows/: README.md
windows/app/: README.md  index.html  package-lock.json
windows/app/src/: App.css  App.tsx  BlobShape.tsx  Icons.tsx  Indicators.tsx  MarkdownText.tsx  NotchShape.tsx  Settings.tsx  motion.ts  types.ts
windows/app/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
windows/app/src-tauri/capabilities/: default.json
windows/app/src-tauri/icons/: icon.icns
windows/app/src-tauri/src/: agent.rs  claude_jsonl.rs  codex_rollout.rs  cost.rs  hooks.rs  installer.rs  lib.rs  main.rs  overlay.rs  sessions.rs  settings.rs  store.rs  tray.rs  watcher.rs  winutil.rs
windows/winget/: BillXu.Notchcode.installer.yaml  BillXu.Notchcode.locale.en-US.yaml  BillXu.Notchcode.yaml  com.billxby.Notchcode.installer.yaml  com.billxby.Notchcode.locale.en-US.yaml  com.billxby.Notchcode.yaml
